--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2",
-    "axios": "^1.6.0",
-    "@google/generative-ai": "^0.12.0"
-  },
+  "express": "^4.18.2",
+  "axios": "^1.6.0",
+  "openai": "^4.20.0"
+}
   "scripts": {
     "start": "node index.js"
   }
