--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.0",
-    "openai": "^4.20.0"
+    "@google/generative-ai": "^0.12.0"
   },
   "scripts": {
     "start": "node index.js"
