--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.0",
-    "@google/generative-ai": "^0.12.0"
+    "axios": "^1.6.0"
   },
   "scripts": {
     "start": "node index.js"
