--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "boti",
+  "name": "boti-baileys",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2",
+    "@whiskeysockets/baileys": "^6.5.0",
+    "pino": "^8.16.1",
+    "qrcode-terminal": "^0.12.0",
     "axios": "^1.6.0"
   },
   "scripts": {
