--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
+    "express": "^4.18.2",
     "pino": "^8.16.1",
-    "qrcode-terminal": "^0.12.0",
+    "@hapi/boom": "^10.0.1",
     "axios": "^1.6.0"
   },
   "scripts": {
